--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -48,7 +48,7 @@
     font-size: 23px;
     color: black;
 }
-.home-logo{
+.social-logo{
     width: 100%; /* Ancho completo */
     max-width: 200px; /* Ancho máximo */
     display: block; /* Para centrar horizontalmente */
