--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -10,7 +10,7 @@
 }
 .psub{
     height: 5vh;
-    color: black;
+    color: gold;
     font-size: 5vh;
     text-align: center;
     line-height: 5vh;
@@ -42,6 +42,12 @@
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+.banner{
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+
+}
 .ppagina{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
@@ -49,7 +55,7 @@
     color: black;
 }
 .social-logo{
-    width: 100%; /* Ancho completo */
+    width: 30%; /* Ancho completo */
     max-width: 200px; /* Ancho máximo */
     display: block; /* Para centrar horizontalmente */
     margin: 0 auto; /* Para centrar horizontalmente */
