--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -27,19 +27,19 @@
     background-size: cover; /* Escala la imagen para cubrir todo el contenedor */
     background-position: center; /* Posiciona la imagen en el centro */
     height: 95vh; /* Altura del div con la imagen */
-    background-image: url('./assets/img/barbe2.png'); /* Ruta de la imagen de fondo */
+    background-image: url('../img/barbe2.png'); /* Ruta de la imagen de fondo */
 }
 .img_restorepass{
     background-size: cover; /* Escala la imagen para cubrir todo el contenedor */
     background-position: center; /* Posiciona la imagen en el centro */
     height: 95vh; /* Altura del div con la imagen */
-    background-image: url('./assets/img/restore.png'); /* Ruta de la imagen de fondo */
+    background-image: url('../img/restore.png'); /* Ruta de la imagen de fondo */
 }
 .img_lateral_crea{
     background-size: cover; /* Escala la imagen para cubrir todo el contenedor */
     background-position: center; /* Posiciona la imagen en el centro */
     height: 95vh; /* Altura del div con la imagen */
-    background-image: url('./assets/img/barbe3.png'); /* Ruta de la imagen de fondo */
+    background-image: url('../img/barbe3.png'); /* Ruta de la imagen de fondo */
 }
 
 .pcorreo{
