Nuevas 3 paginas. cierresesion-modificabarbero-ususariocreado

--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -69,7 +69,7 @@
     
 }
 .login{
-    background-image: url('./assets/img/patern.png');
+    background-image: url('../img/patern.png');
     height: 95vh; /* Misma altura que el div de la imagen */
     padding: 40px; /* Espacio interno */
 }
