--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -8,6 +8,16 @@
     text-align: center; /* Alineación del texto al centro */
     line-height: 5vh; /* Altura de línea para centrar verticalmente */
 }
+.mensaje-bienvenida {
+    color: white; /* Color del texto */
+    font-weight: bold; /* Texto en negrita */
+    margin-right: 10px; /* Margen derecho para separar del botón "Cerrar sesión" */
+}
+
+/* Ocultamos el mensaje de bienvenida al inicio */
+.mensaje-bienvenida {
+    display: none; /* Oculta el elemento */
+}
 .navbar {
     color: white; /* Color del texto */
     text-decoration: none; /* Quita el subrayado */
